<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ease_toolbar_height"
        app:titleBarTitle="@string/main_about_me_currency"
        app:titleBarMenuTitleColor="@color/ease_color_on_background_low"
        app:titleBarTitleTextColor="@color/ease_color_on_background_low"
        app:titleBarMenuIconTint="@color/ease_color_on_background_low"
        app:titleBarSubtitleTextColor="@color/ease_color_text_secondary"
        android:visibility="visible" />

    <com.hyphenate.easeui.widget.EaseSwitchItemView
        android:id="@+id/switch_item_dark"
        app:layout_constraintTop_toBottomOf="@+id/function_layout"
        app:switchItemTitle="@string/main_about_me_currency_dark_model"
        style="@style/ease_contact_detail_switch_item"
        android:layout_width="match_parent"
        android:layout_height="54dp" />

    <com.hyphenate.easeui.widget.EaseArrowItemView
        android:id="@+id/arrow_item_feature"
        app:layout_constraintTop_toBottomOf="@+id/item_member_list"
        app:arrowItemTitle="@string/main_about_me_currency_feature"
        style="@style/ease_group_detail_arrow_item"
        app:arrowItemShowArrow="true"
        android:layout_width="match_parent"
        android:layout_height="54dp"/>

    <com.hyphenate.easeui.widget.EaseArrowItemView
        android:id="@+id/arrow_item_language"
        app:layout_constraintTop_toBottomOf="@+id/item_member_list"
        app:arrowItemTitle="@string/main_about_me_currency_language"
        style="@style/ease_group_detail_arrow_item"
        app:arrowItemShowArrow="true"
        android:layout_width="match_parent"
        android:layout_height="54dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>