<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_login_im"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ease_size_20"
        android:text="@string/em_login_im"
        android:textAppearance="@style/Ease.TextAppearance.Headline.Large"
        android:textColor="@color/ease_color_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/et_login_phone"
        app:layout_constraintStart_toStartOf="@id/et_login_phone" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ease_size_4"
        android:background="@drawable/demo_login_version_bg"
        android:textAppearance="@style/Ease.TextAppearance.Label.ExtraSmall"
        android:textColor="@color/ease_color_text_primary"
        app:layout_constraintEnd_toEndOf="@id/et_login_phone"
        app:layout_constraintTop_toTopOf="@id/tv_login_im"
        tools:text="V4.1.0" />

    <EditText
        android:id="@+id/et_login_phone"
        style="@style/em_login_et_input"
        android:hint="@string/register_phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <RelativeLayout
        android:id="@+id/ll_login_code"
        android:layout_width="0dp"
        android:layout_height="@dimen/ease_size_48"
        android:layout_marginTop="@dimen/ease_size_24"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_phone">

        <EditText
            android:id="@+id/et_login_code"
            style="@style/em_login_et_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/em_login_input_verification_code"
            android:inputType="number"
            android:textSize="@dimen/em_login_text_size" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/ease_size_52"
            android:padding="10dp"
            android:paddingEnd="2dp"
            android:text="@string/em_login_get_verification_code"
            android:textAppearance="@style/Ease.TextAppearance.Label.Medium"
            android:textColor="@color/ease_color_primary" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/em_login_btn"
        android:text="@string/em_login_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_login_code" />

    <CheckBox
        android:id="@+id/cb_select"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:button="@drawable/demo_cb_agreement_select"
        android:padding="3dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/tv_agreement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/ease_size_20"
        android:layout_marginEnd="40dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/em_login_agreement"
        android:textAppearance="@style/Ease.TextAppearance.Body.Small"
        android:textColor="@color/ease_color_on_background"
        android:textColorHighlight="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cb_select"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/tv_login_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ease_size_65"
        android:text="@string/em_login_server_configure"
        android:textAppearance="@style/Ease.TextAppearance.Body.Medium"
        android:textColor="@color/ease_color_text_secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agreement"
        app:layout_constraintVertical_bias="1" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="@dimen/ease_size_16"
        android:layout_marginTop="@dimen/ease_size_20"
        android:layout_marginRight="@dimen/ease_size_16"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_login_code" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/webView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/webView" />


</androidx.constraintlayout.widget.ConstraintLayout>